name:                bcd-log
version:             0.1.2.0
synopsis:            Biocad Log
description:
            Biocad log includes:
            - basic logging fuctions to log into STDOUT
homepage:            https://github.com/biocad/bcd-log#readme
license:             BSD3
license-file:        LICENSE
author:              Bogdan Neterebskii
maintainer:          neterebskiy@biocad.ru
copyright:           (c) 2018, BIOCAD CBD
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.BCD.Log
  other-modules:       System.BCD.Log.Types
                     , System.BCD.Log.Class
                     , System.BCD.Log.Formatting
                     , System.BCD.Log.Instances  
                     , System.BCD.Log.TextLike
                     , System.BCD.Log.Time  
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , clock
                     , data-has
                     , deepseq
                     , fast-logger
                     , mtl
                     , text
                     , time
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  ConstraintKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , OverloadedStrings
                     , RecordWildCards
                     , TypeApplications
                     , UndecidableInstances

source-repository head
  type:     git
  location: https://github.com/biocad/bcd-log
